--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -107,7 +107,7 @@
                     <div class="container">
                         <div class="main-menu-three__wrapper-inner clearfix">
                             <div class="main-menu-three__logo">
-                                <a href="index.html"><img src="assets/images/resources/logo-3.png" alt=""></a>
+                                <a href="/"><img src="assets/images/resources/logo-3.png" alt=""></a>
                             </div>
                             <div class="main-menu-three__left">
                                 <div class="main-menu-three__main-menu-box">
