demoussage, photovolt, charpente ok

--- a/templates/couverture/index.html.twig
+++ b/templates/couverture/index.html.twig
@@ -1,20 +1,99 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CouvertureController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<!--Service Details Start-->
+	<section class="service-details">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-4 col-lg-5">
+					<div class="service-details__left">
+						<div class="service-details__category">
+							<ul class="service-details__category-list list-unstyled">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/duboi/Documents/web/ToitureMarlier/src/Controller/CouvertureController.php</code></li>
-        <li>Your template at <code>C:/Users/duboi/Documents/web/ToitureMarlier/templates/couverture/index.html.twig</code></li>
-    </ul>
-</div>
+								<li>
+									<a href="single-play-roofing.html">Single play roofing
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="modified-roofing.html">Modified roofing
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li class="active">
+									<a href="/couverture">Couverture
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="roof-inspection.html">Roof inspection
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="roof-installation.html">Roof installation
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="metal-roofing.html">Metal roofing
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+							</ul>
+						</div>
+
+
+					</div>
+				</div>
+				<div class="col-xl-8 col-lg-7">
+					<div class="service-details__right">
+						<div class="service-details__img">
+							<img src="assets/images/services/couverture3.jpg" alt="">
+							<div class="service-details__icon">
+								<span class="icon-joist"></span>
+							</div>
+						</div>
+						<div class="service-details__content">
+							<h3 class="service-details__content-title">Couverture</h3>
+							<p class="service-details__text-1">
+								Après un diagnostic détaillé et exhaustif, Nos chef de chantiers vous apporterons les solutions en tenant compte des normes et des conditions de mise en œuvre de chaque catégorie : pente, support, charpente. Le couvreur ne fait pas que poser des tuiles. Son travail commence avec la fabrication des couches qui viendront se glisser entre la charpente et la couverture ( la charpente, pare vapeur, les éléments d&#39;isolation, l&#39;écran sous toiture, la ventilation et le vide sous toit, la couverture, l&#39;évacuation d&#39;eau et les ouvertures. La couverture implique aussi des éléments de zinguerie comme les entourages en zinc de cheminée, les solins, les gouttières pour évacuer l’eau de pluie.</p>
+							<p class="service-details__text-2">Nos équipes effectuerons la pose de tout type de tuiles : ardoises, tuiles terre
+																cuite ou béton, tuiles galbées ou plates et tuiles solaires ( X-Tile &amp; X-Roof ).</p>
+							<p class="service-details__text-3">Nous posons les écrans de sous toiture (pare-pluie HPV) pour protéger votre charpente et vos combles de l’eau, du vent et de la poussière. Nous nous occupons également des systèmes de ventilation du faîtage en plaçant des tuiles de ventilation de type chatières pour assurer une bonne aération indispensable à votre toiture.</p>
+						</div>
+						
+						<div class="service-details__benefits">
+							<div class="row">
+								<div class="col-xl-6">
+									<div class="service-details__benefits-single">
+										<div class="service-details__benefits-img">
+											<img src="assets/images/services/couverture1.jpg" alt="">
+										</div>
+										
+									</div>
+								</div>
+								<div class="col-xl-6">
+									<div class="service-details__benefits-single">
+										<div class="service-details__benefits-img">
+											<img src="assets/images/services/couverture2.jpg" alt="">
+										</div>
+										
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--Service Details End-->
 {% endblock %}
