--- a/templates/admin_photo/index.html.twig
+++ b/templates/admin_photo/index.html.twig
@@ -1,20 +1,63 @@
-{% extends 'base.html.twig' %}
+<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>
+			{% block title %}Toiture Marlier Admin{% endblock %}
+		</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+		{% block favicons %}
+			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
+			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
+			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
+			<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
+			<meta name="description" content="/Roofsie HTML 5 Template "/>
+		{% endblock %}
 
-{% block title %}Hello AdminPhotoController!{% endblock %}
+		{{ encore_entry_link_tags('app') }}
+		{% block stylesheets %}{% endblock %}
+		{{ encore_entry_link_tags('app') }}
+	</head>
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<div class="container">
+	<h1 class="my-5">Gestion des chantiers</h1>
+	<div class="table-responsive">
+		<table class="table table-hover">
+			<thead>
+				<tr>
+					<th>Id</th>
+					<th>Description</th>
+					<th>Images</th>
+					<th class="text-center">Action</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for chantier in chantiers %}
+					<tr>
+						<td>{{ chantier.id }}</td>
+						<td>{{ chantier.description }}</td>
+						{% if chantier.image %}
+                        <td>{{ chantier.description }}</td>
+                        {% endif %}
+                        
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/duboi/Documents/web/ToitureMarlier/src/Controller/AdminPhotoController.php</code></li>
-        <li>Your template at <code>C:/Users/duboi/Documents/web/ToitureMarlier/templates/admin_photo/index.html.twig</code></li>
-    </ul>
+                        <td class="text-center">
+							<div class="btn-group" role="group">
+								<a href="" class="btn btn-warning">
+									<i class="fa-solid fa-lock"></i>
+								</a>
+								<a href="" class="btn btn-danger delete-btn">
+									<i class="fas fa-trash"></i>
+								</a>
+							</div>
+						</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
 </div>
+	<script src="https://kit.fontawesome.com/61eae04d09.js" crossorigin="anonymous"></script>
+
 {% endblock %}
