--- a/templates/demoussage/index.html.twig
+++ b/templates/demoussage/index.html.twig
@@ -1,20 +1,99 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DemoussageController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<!--Service Details Start-->
+	<section class="service-details">
+		<div class="container">
+			<div class="row">
+				<div class="col-xl-4 col-lg-5">
+					<div class="service-details__left">
+						<div class="service-details__category">
+							<ul class="service-details__category-list list-unstyled">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/duboi/Documents/web/ToitureMarlier/src/Controller/DemoussageController.php</code></li>
-        <li>Your template at <code>C:/Users/duboi/Documents/web/ToitureMarlier/templates/demoussage/index.html.twig</code></li>
-    </ul>
-</div>
+								<li class="active">
+									<a href="/demoussage">Démoussage
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="modified-roofing.html">Modified roofing
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="/couverture">Couverture
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="roof-inspection.html">Roof inspection
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="roof-installation.html">Roof installation
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="metal-roofing.html">Metal roofing
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+							</ul>
+						</div>
+
+
+					</div>
+				</div>
+				<div class="col-xl-8 col-lg-7">
+					<div class="service-details__right">
+						<div class="service-details__img">
+							<img src="assets/images/services/couverture3.jpg" alt="">
+							<div class="service-details__icon">
+								<span class="icon-joist"></span>
+							</div>
+						</div>
+						<div class="service-details__content">
+							<h3 class="service-details__content-title">Couverture</h3>
+							<p class="service-details__text-1">
+								Votre toiture doit être entretenue pour prévenir les risques d’infiltration ou les déperditions thermiques. Pour qu’elle tienne dans la durée, il convient de la nettoyer (tous les 5-6 ans, en fonction du revêtement), d’enlever les mousses et les feuilles mortes, d’améliorer son imperméabilité mais aussi de la réparer afin qu’elle conserve toute son étanchéité.
+							</p>
+							<p class="service-details__text-2">Toiture Marlier s’occupe de l’entretien de votre toiture pour vous.</p>
+							<p class="service-details__text-3">Nous éliminons les végétaux, responsables d’un changement de couleur de vos tuiles à l’aide d’un nettoyage doux. Un nettoyage à haute pression risquerait d’endommager la couverture, c’est pourquoi il vaut mieux nous confier cette tâche. Nous nous chargeons ensuite d’appliquer un fongicide, un anti-mousse et un traitement hydrofuge.</p>
+						</div>
+
+						<div class="service-details__benefits">
+							<div class="row">
+								<div class="col-xl-6">
+									<div class="service-details__benefits-single">
+										<div class="service-details__benefits-img">
+											<img src="assets/images/services/couverture1.jpg" alt="">
+										</div>
+
+									</div>
+								</div>
+								<div class="col-xl-6">
+									<div class="service-details__benefits-single">
+										<div class="service-details__benefits-img">
+											<img src="assets/images/services/couverture2.jpg" alt="">
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--Service Details End-->
 {% endblock %}
