--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -48,7 +48,7 @@
 
                     <div class="swiper-slide">
                         <div class="image-layer-three"
-                            style="background-image: url(assets/images/backgrounds/main-slider-3-1.jpg);"></div>
+                            style="background-image: url(assets/images/backgrounds/main-slider-1.jpeg);"></div>
                         <!-- /.image-layer -->
 
                         <div class="container">
@@ -68,7 +68,7 @@
 
                     <div class="swiper-slide">
                         <div class="image-layer-three"
-                            style="background-image: url(assets/images/backgrounds/main-slider-3-2.jpg);"></div>
+                            style="background-image: url(assets/images/backgrounds/main-slider-2.jpeg);"></div>
                         <!-- /.image-layer -->
 
                         <div class="container">
@@ -88,7 +88,26 @@
 
                     <div class="swiper-slide">
                         <div class="image-layer-three"
-                            style="background-image: url(assets/images/backgrounds/main-slider-3-3.jpg);"></div>
+                            style="background-image: url(assets/images/backgrounds/main-slider-3.jpeg);"></div>
+                        <!-- /.image-layer -->
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-xl-12">
+                                    <div class="main-slider-three__content">
+                                        <h2 class="main-slider-three__title">Roof installation <br> services in your city</h2>
+                                        <p class="main-slider-three__text">We provide a variety of roofing and maintenance services for <br> all type of house makes happy.</p>
+                                        <div class="main-slider-three__btn-box">
+                                            <a href="about.html" class="thm-btn main-slider-three__btn"> <i class="fa fa-arrow-right"></i> Discover more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="image-layer-three"
+                            style="background-image: url(assets/images/backgrounds/main-slider-4.jpeg);"></div>
                         <!-- /.image-layer -->
 
                         <div class="container">
@@ -131,7 +150,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-3 col-lg-4">
-                        <div class="appointment__left">
+                        <div class="appointment__left" style="padding-top: 28px">
                             <div class="appointment-shape-1" style="background-image: url(assets/images/shapes/appointment-shape-1.png);"></div>
                             <div class="appointment__left-content">
                                 <h3 class="appointment__title">Book your appointment</h3>
@@ -167,22 +186,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6 col-lg-6 col-md-6">
-                                        <div class="appointment__input-box">
-                                            <input type="text" placeholder="Select Date" name="date" id="datepicker">
-                                            <div class="appointment__input-icon">
-                                                <i class="far fa-calendar"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-6 col-lg-6 col-md-6">
-                                        <div class="appointment__input-box">
-                                            <input type="text" name="time" placeholder="Choose Time">
-                                            <div class="appointment__input-icon">
-                                                <i class="far fa-clock"></i>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
+                                    
                                     <div class="col-xl-6 col-lg-6 col-md-6">
                                         <div class="appointment__input-box">
                                             <button type="submit" class="thm-btn appointment__btn"><i class="fa fa-arrow-right"></i>Send a request</button>
