--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -49,7 +49,7 @@
                                 <div class="services-one__icon">
                                     <span class="icon-roof"></span>
                                 </div>
-                                <h3 class="services-one__title"><a href="single-play-roofing.html">Démoussage</a></h3>
+                                <h3 class="services-one__title"><a href="/demoussage">Démoussage</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
                                     <a href="/demoussage">Read More <i class="fa fa-arrow-right"></i></a>
@@ -62,13 +62,13 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="200ms">
                         <div class="services-one__single">
                             <div class="services-one__img">
-                                <img src="assets/images/services/services-1-2.jpg" alt="">
+                                <img src="assets/images/services/couverture3.jpg" alt="">
                             </div>
                             <div class="services-one__content">
                                 <div class="services-one__icon">
                                     <span class="icon-joist"></span>
                                 </div>
-                                <h3 class="services-one__title"><a href="modified-roofing.html">Couverture</a></h3>
+                                <h3 class="services-one__title"><a href="/couverture">Couverture</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
                                     <a href="/couverture">Read More <i class="fa fa-arrow-right"></i></a>
@@ -87,7 +87,7 @@
                                 <div class="services-one__icon">
                                     <span class="icon-roof-1"></span>
                                 </div>
-                                <h3 class="services-one__title"><a href="built-up-roofing.html">Panneau Photovoltaïque</a></h3>
+                                <h3 class="services-one__title"><a href="/photovoltaique">Panneau Photovoltaïque</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
                                     <a href="/photovoltaique">Read More <i class="fa fa-arrow-right"></i></a>
