--- a/templates/couverture/index.html.twig
+++ b/templates/couverture/index.html.twig
@@ -13,17 +13,10 @@
 							<ul class="service-details__category-list list-unstyled">
 
 								<li>
-									<a href="single-play-roofing.html">Single play roofing
+									<a href="/demoussage">Démoussage
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
-
-								<li>
-									<a href="modified-roofing.html">Modified roofing
-										<span class="fa fa-angle-right"></span>
-									</a>
-								</li>
-
 								<li class="active">
 									<a href="/couverture">Couverture
 										<span class="fa fa-angle-right"></span>
@@ -31,19 +24,19 @@
 								</li>
 
 								<li>
-									<a href="roof-inspection.html">Roof inspection
+									<a href="/photovoltaique">Panneau Photovoltaïque
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
 
 								<li>
-									<a href="roof-installation.html">Roof installation
+									<a href="/charpente">Charpente
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
 
 								<li>
-									<a href="metal-roofing.html">Metal roofing
+									<a href="/toiture">Toiture plate
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
