--- a/templates/photovoltaique/index.html.twig
+++ b/templates/photovoltaique/index.html.twig
@@ -17,7 +17,6 @@
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
-
 								<li>
 									<a href="/couverture">Couverture
 										<span class="fa fa-angle-right"></span>
@@ -30,6 +29,17 @@
 									</a>
 								</li>
 
+								<li>
+									<a href="/charpente">Charpente
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
+								<li>
+									<a href="/toiture">Toiture plate
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
 							</ul>
 						</div>
 
@@ -45,7 +55,7 @@
 							</div>
 						</div>
 						<div class="service-details__content">
-							<h3 class="service-details__content-title">Couverture</h3>
+							<h3 class="service-details__content-title">Panneau Photovoltaïque</h3>
 							<p class="service-details__text-1">
 								Augmenter votre pouvoir d’achat et faits un geste durable pour la planète avec l’installation de panneaux solaires.
 							</p>
@@ -153,8 +163,7 @@
 														<i class="fa fa-arrow-right"></i>
 													</div>
 													<div class="text">
-														<p>Vous maîtrisez durablement vos factures d’électricité et limitez l’impact des hausses
-																																													de prix</p>
+														<p>Vous maîtrisez durablement vos factures d’électricité et limitez l’impact des hausses de prix</p>
 													</div>
 												</li>
 												<li>
