--- a/templates/prime/index.html.twig
+++ b/templates/prime/index.html.twig
@@ -17,6 +17,13 @@
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
+
+								<li>
+									<a href="modified-roofing.html">Modified roofing
+										<span class="fa fa-angle-right"></span>
+									</a>
+								</li>
+
 								<li>
 									<a href="/couverture">Couverture
 										<span class="fa fa-angle-right"></span>
@@ -24,19 +31,19 @@
 								</li>
 
 								<li>
-									<a href="/photovoltaique">Panneau Photovoltaïque
+									<a href="roof-inspection.html">Roof inspection
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
 
 								<li>
-									<a href="/charpente">Charpente
+									<a href="roof-installation.html">Roof installation
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
 
 								<li>
-									<a href="/toiture">Toiture plate
+									<a href="metal-roofing.html">Metal roofing
 										<span class="fa fa-angle-right"></span>
 									</a>
 								</li>
@@ -55,12 +62,12 @@
 							</div>
 						</div>
 						<div class="service-details__content">
-							<h3 class="service-details__content-title">Démoussage</h3>
+							<h3 class="service-details__content-title">Toiture plate</h3>
 							<p class="service-details__text-1">
-								Votre toiture doit être entretenue pour prévenir les risques d’infiltration ou les déperditions thermiques. Pour qu’elle tienne dans la durée, il convient de la nettoyer (tous les 5-6 ans, en fonction du revêtement), d’enlever les mousses et les feuilles mortes, d’améliorer son imperméabilité mais aussi de la réparer afin qu’elle conserve toute son étanchéité.
+								La technique dite de la toiture chaude consiste en la pose d’une sous-couche fixée directement au plancher de la toiture. Sur celle-ci vient s’installer l’isolant, qui sera ensuite recouvert par une seconde sous-couche et la couche de finition pour les toiture en Derbigum , le travail sera le même pour les toiture en EPDM.
 							</p>
-							<p class="service-details__text-2">Toiture Marlier s’occupe de l’entretien de votre toiture pour vous.</p>
-							<p class="service-details__text-3">Nous éliminons les végétaux, responsables d’un changement de couleur de vos tuiles à l’aide d’un nettoyage doux. Un nettoyage à haute pression risquerait d’endommager la couverture, c’est pourquoi il vaut mieux nous confier cette tâche. Nous nous chargeons ensuite d’appliquer un fongicide, un anti-mousse et un traitement hydrofuge.</p>
+							<p class="service-details__text-3">Derbigum : qu’il soit lisse ou d’aspect ardoisé, le roofing offre une durée de vie pouvant aller jusqu’à 30 ans, ainsi qu’une grande résistance aux changements de température.</p>
+							<p class="service-details__text-3"><b>L’EPDM: </b>est un revêtement en caoutchouc qui offre une grande élasticité, évitant ainsi les déchirures et garantissant une longévité de plus de 30 ans.</p>
 						</div>
 
 						<div class="service-details__benefits">
