--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -106,7 +106,7 @@
                                 <div class="services-one__icon">
                                     <span class="icon-analysis"></span>
                                 </div>
-                                <h3 class="services-one__title"><a href="roof-inspection.html">Charpente</a></h3>
+                                <h3 class="services-one__title"><a href="/charpente">Charpente</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
                                     <a href="/charpente">Read More <i class="fa fa-arrow-right"></i></a>
@@ -125,10 +125,10 @@
                                 <div class="services-one__icon">
                                     <span class="icon-support"></span>
                                 </div>
-                                <h3 class="services-one__title"><a href="roof-installation.html">Roof installation</a></h3>
+                                <h3 class="services-one__title"><a href="/toiture">Toiture plate</a></h3>
                                 <p class="services-one__text">Nulla commodo dolor massa, vel pellen esque nulla congue quis.</p>
                                 <div class="services-one__read-more">
-                                    <a href="roof-installation.html">Read More <i class="fa fa-arrow-right"></i></a>
+                                    <a href="/toiture">Read More <i class="fa fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
