--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -101,7 +101,7 @@
                     <div class="container">
                         <div class="main-menu-three__wrapper-inner clearfix">
                             <div class="main-menu-three__logo">
-                                <a href="/"><img src="assets/images/resources/logo-3.png" alt=""></a>
+                                <a href="/"><img src="assets/images/resources/marlier4White.png" alt="" style="height: 80px;"></a>
                             </div>
                             <div class="main-menu-three__left">
                                 <div class="main-menu-three__main-menu-box">
@@ -117,11 +117,11 @@
                                         <li class="dropdown">
                                             <a href="/services">Services</a>
                                             <ul class="border-top-2px">
-                                                <li><a href="/demoussage">Démoussage</a></li>
-                                                <li><a href="/couverture">Couverture</a></li>
-                                                <li><a href="/photovoltaique">Panneau Photovoltaïque</a></li>
-                                                <li><a href="/charpente">Charpente</a></li>
-                                                <li><a href="/toiture">Toiture plate</a></li>
+                                                <li><a href=" {{ path('app_demoussage') }}">Démoussage</a></li>
+                                                <li><a href=" {{ path('app_couverture') }}">Couverture</a></li>
+                                                <li><a href=" {{ path('app_photovoltaique') }}">Panneau Photovoltaïque</a></li>
+                                                <li><a href=" {{ path('app_charpente') }}">Charpente</a></li>
+                                                <li><a href=" {{ path('app_toiture') }}">Toiture plate</a></li>
                                             </ul>
                                         </li>
                                        
